rephrase last bullet

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
             </li>
             <li>
                 Making a strictly 2D version of Super Hexagon in
-                <a href="https://love2d.org/">LÖVE</a>. I’m wondering
-                if it’s a good idea to also make the chiptune soundtrack?
+                <a href="https://love2d.org/">LÖVE</a>. I’m thinking if I
+                should also create a chiptune soundtrack but I have zero
+                experience in music making.
             </li>
         </ul>
 
