improve copy of bullets

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
             <li>
                 Figuring out how to make a neural network library in
                 <a href="http://call-cc.org/">Chicken Scheme</a>.
-                Maybe SBCL is a better option?
+                Is SBCL a better option?
             </li>
             <li>
                 Reading the second edition of
                 <a href="https://web.mit.edu/6.001/6.037/sicp.pdf">SICP</a>,
-                a very hard but also highly compelling book in computer
-                science and software systems.
+                a very hard but highly compelling book in computer science and
+                software systems.
             </li>
             <li>
                 Making a strictly 2D version of Super Hexagon in
-                <a href="https://love2d.org/">LÖVE</a>. I’m thinking if I
-                should also create a chiptune soundtrack but I have zero
-                experience in music making.
+                <a href="https://love2d.org/">LÖVE</a>. I want to write a
+                chiptune soundtrack for it as well but I have zero idea on how
+                to make music of any kind.
             </li>
         </ul>
 
