--- a/index.html
+++ b/index.html
@@ -19,18 +19,10 @@
         <h1>Hi, I’m Theodore.</h1>
 
         <p>
-            I’m interested in figuring out how we can make high quality software
-            that is fast and simple.
+            I spend most of time trying to understand how we can make useful software.
         </p>
         <p>
-            Hire me through
-            <a href="https://zfraenkel.com/">Zermelo Fraenkel</a>
-            for general software making or through
-            <a href="https://animorph.coop/">Animorph</a>
-            if you are specifically interested in software for medical devices.
-        </p>
-        <p>
-            These days, I am:
+            Some fun projects:
         </p>
         <ul>
             <li>
