--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Hi, I’m Theodore.</h1>
 
         <p>
-            I spend most of time trying to understand how we can make useful software.
+            I spend a lot of time trying to understand how we can make useful software.
         </p>
         <p>
             Some fun projects:
@@ -37,13 +37,18 @@
                 software systems.
             </li>
             <li>
-                Making a strictly 2D version of Super Hexagon in
-                <a href="https://love2d.org/">LÖVE</a>. I want to write a
-                chiptune soundtrack for it as well but I have zero idea on how
-                to make music of any kind.
+                Implementing Ivan Illich's learning system, which he wrote in his book
+                <em>Deschooling Society</em>, published in 1971:
+                <a href="https://01z.co/">01z.co</a>
+                / <a href="https://github.com/sirodoht/z01">source code</a>
+            </li>
+            <li>
+                Publishing newly written books that belong to the public domain from
+                day one through
+                <a href="https://laniakeabooks.org/">Laniakea Books</a>.
             </li>
         </ul>
 
-        <p>If you want to get in touch, my email is zf @ this domain.</p>
+        <p>Send me an email! My address is zf @ this domain.</p>
     </body>
 </html>
