improve phrasing on 01z section

--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
         </p>
         <ul>
             <li>
-                Figuring out how to make a neural network library in
+                I’m trying to figure out how to make a neural network library in
                 <a href="http://call-cc.org/">Chicken Scheme</a>.
                 Is SBCL a better option?
             </li>
             <li>
                 Reading the second edition of
                 <a href="https://web.mit.edu/6.001/6.037/sicp.pdf">SICP</a>,
-                a very hard but highly compelling book in computer science and
-                software systems.
+                one of the holy books of computer science and software systems.
             </li>
             <li>
-                Implementing Ivan Illich's learning system, which he wrote in his book
-                <em>Deschooling Society</em>, published in 1971:
+                Implementing Ivan Illich's learning system, one he described in his book
+                <em>
+                    <a href="https://en.wikipedia.org/wiki/Deschooling_Society>
+                        Deschooling Society</a></em>,
+                published in 1971:
                 <a href="https://01z.co/">01z.co</a>
                 / <a href="https://github.com/sirodoht/z01">source code</a>
             </li>
