add more info on useful software

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
         <p>
             I spend a lot of time trying to understand how we can make useful software.
+            The first things I discovered are that it definitely needs to be fast and
+            it definitely needs to be simple. The rest still pending.
         </p>
         <p>
             Some fun projects:
@@ -38,7 +40,7 @@
             <li>
                 Implementing Ivan Illich's learning system, one he described in his book
                 <em>
-                    <a href="https://en.wikipedia.org/wiki/Deschooling_Society>
+                    <a href="https://en.wikipedia.org/wiki/Deschooling_Society">
                         Deschooling Society</a></em>,
                 published in 1971:
                 <a href="https://01z.co/">01z.co</a>
@@ -51,6 +53,8 @@
             </li>
         </ul>
 
-        <p>Send me an email! My address is zf @ this domain.</p>
+        <p>
+            Send me an email! Just to say hi. My address is zf @ this domain.
+        </p>
     </body>
 </html>
