--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
         <style>
             body {
-                max-width: 600px;
+                max-width: 620px;
                 font-family: sans-serif;
                 line-height: 1.5;
             }
+            a { color: blue; }
+            a:visited { color: cornflowerblue; }
+            hr { border: none; border-top: 1px solid black; }
         </style>
     </head>
 
@@ -19,42 +22,112 @@
         <h1>Hi, I’m Theodore.</h1>
 
         <p>
-            I spend a lot of time trying to understand how we can make useful software.
-            The first things I discovered are that it definitely needs to be fast and
-            it definitely needs to be simple. The rest still pending.
+            Most of the time, I'm trying to understand how we can make useful software.
+            I think it needs to be fast and simple. I publish some of this work
+            <a href="https://github.com/sirodoht">on GitHub</a>.
+        </p>
+
+        <p>
+            Projects:
         </p>
         <p>
-            Some fun projects:
+            <a style="color: maroon;" href="https://mataroa.blog/">Mataroa</a> is an
+            <a href="https://github.com/mataroa-blog/mataroa">open source</a>
+            blogging platform based on the design philosophy of minimalism with strong
+            data interoperability implementation rules.
+        </p>
+
+        <p>
+            <a style="color: teal;" href="https://laniakeabooks.org/">Laniakea Books</a>
+            is a public domain publishing house based out of London, England. We publish
+            brand new books which are dedicated to the public domain from day one. Read
+            about our philosophy
+            <a href="https://laniakeabooks.org/philosophy/">here</a>.
+        </p>
+        <p style="color: grey;">
+            Read my book,
+            <a href="https://laniakeabooks.org/books/letters-from-prison/">Letters from Prison</a>,
+            a collection of ideas on society and its prisonhood.
+        </p>
+
+        <p>
+            <a style="color: darkorchid;" href="https://chaitinschool.org/">Chaitin School</a>
+            is an in-person group of people interested in software engineering as a fun
+            activity of leisure time as well as a craft to become skilled at. Our values
+            are inclusivity, expertise, humour, gifting, democracy, exploration, community.
+            Join us! We are in London, England.
+        </p>
+
+        <p>
+            <a style="color: chocolate;" href="https://newspeak.house/">Newspeak House</a>
+            is an independent unaccredited residential college founded in 2015 in which
+            I contribute as member and lecturer. We have a
+            <a href="https://newspeak.house/study-with-us">course</a>
+            on political technology.
+        </p>
+
+        <p>
+            I keep a blog at <a href="https://nutcroft.com/">nutcroft.com</a>. See the
+            <a href="https://nutcroft.com/toc/">table of contents</a>.
+        </p>
+
+        <p>
+            Everything I write is dedicated to the public domain.
+        </p>
+
+        <hr style="border-color: lightcoral;">
+
+        <p>
+            Bored? Do these:
         </p>
         <ul>
             <li>
-                I’m trying to figure out how to make a neural network library in
-                <a href="http://call-cc.org/">Chicken Scheme</a>.
-                Is SBCL a better option?
+                write a neural network library in
+                <a href="http://call-cc.org/">chicken scheme</a>
             </li>
             <li>
-                Reading the second edition of
-                <a href="https://web.mit.edu/6.001/6.037/sicp.pdf">SICP</a>,
-                one of the holy books of computer science and software systems.
+                read
+                <a href="https://web.mit.edu/6.001/6.037/sicp.pdf">SICP</a> and learn
+                <a href="https://en.wikipedia.org/wiki/Scheme_(programming_language)">scheme</a>
             </li>
             <li>
-                Implementing Ivan Illich's learning system, one he described in his book
-                <em>
-                    <a href="https://en.wikipedia.org/wiki/Deschooling_Society">
-                        Deschooling Society</a></em>,
-                published in 1971:
+                implement Ivan Illich's learning system from
+                <a href="https://en.wikipedia.org/wiki/Deschooling_Society">Deschooling Society</a>
+                (1971). I challenge you to make it better (more usable and more useful)
+                than my implementation:
                 <a href="https://01z.co/">01z.co</a>
                 / <a href="https://github.com/sirodoht/z01">source code</a>
             </li>
-            <li>
-                Publishing newly written books that belong to the public domain from
-                day one through
-                <a href="https://laniakeabooks.org/">Laniakea Books</a>.
-            </li>
+            <li>start a new kind of university</li>
         </ul>
 
+        <hr style="border-color: turquoise;">
         <p>
-            Send me an email! Just to say hi. My address is zf @ this domain.
+            Don’t be a stranger. Hello! Send me a hello back. zf@sirodoht.com
         </p>
+
+        <hr style="border-color: lawngreen;">
+        <p style="font-family: monospace;">
+            Permission is hereby granted, free of charge, to any person obtaining a copy
+            of this software and associated documentation files (the "Software"), to deal
+            in the Software without restriction, including without limitation the rights
+            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+            copies of the Software, and to permit persons to whom the Software is
+            furnished to do so, subject to the following conditions:
+        </p>
+        <p style="font-family: monospace;">
+            The above copyright notice and this permission notice shall be included in all
+            copies or substantial portions of the Software.
+        </p>
+        <p style="font-family: monospace;">
+            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+            SOFTWARE.
+        </p>
+
     </body>
 </html>
