change hello phrasing

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <hr style="border-color: turquoise;">
         <p>
-            Don’t be a stranger. Hello! Send me a hello back. zf@sirodoht.com
+            Don’t be a stranger. Hello! Email hello back! zf@sirodoht.com
         </p>
 
         <hr style="border-color: lawngreen;">
