--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
         <title>Theodore Keloglou</title>
 
         <style>
-            body {
-                max-width: 620px;
-                font-family: sans-serif;
-                line-height: 1.5;
-            }
+            body { max-width: 620px; font-family: sans-serif; line-height: 1.5; }
             a { color: blue; }
             a:visited { color: cornflowerblue; }
             hr { border: none; border-top: 1px solid black; }
@@ -104,29 +100,6 @@
         <hr style="border-color: turquoise;">
         <p>
             Don’t be a stranger. Hello! Email hello back! zf@sirodoht.com
-        </p>
-
-        <hr style="border-color: lawngreen;">
-        <p style="font-family: monospace;">
-            Permission is hereby granted, free of charge, to any person obtaining a copy
-            of this software and associated documentation files (the "Software"), to deal
-            in the Software without restriction, including without limitation the rights
-            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-            copies of the Software, and to permit persons to whom the Software is
-            furnished to do so, subject to the following conditions:
-        </p>
-        <p style="font-family: monospace;">
-            The above copyright notice and this permission notice shall be included in all
-            copies or substantial portions of the Software.
-        </p>
-        <p style="font-family: monospace;">
-            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-            SOFTWARE.
         </p>
 
     </body>
