update about section

--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <title>Theodore Keloglou</title>
-
         <style>
-            body { max-width: 620px; font-family: sans-serif; line-height: 1.5; }
+            body { max-width: 580px; font-family: sans-serif; line-height: 1.5; margin: auto;}
             a { color: blue; }
             a:visited { color: cornflowerblue; }
             hr { border: none; border-top: 1px solid black; }
         </style>
     </head>
-
     <body>
         <h1>Hi, I’m Theodore.</h1>
 
@@ -27,54 +24,69 @@
             Projects:
         </p>
         <p>
-            <a style="color: maroon;" href="https://mataroa.blog/">Mataroa</a> is an
+            <a style="color: salmon;" href="https://mataroa.blog/">Mataroa</a> is an
             <a href="https://github.com/mataroa-blog/mataroa">open source</a>
             blogging platform based on the design philosophy of minimalism with strong
             data interoperability implementation rules.
         </p>
 
         <p>
-            <a style="color: teal;" href="https://laniakeabooks.org/">Laniakea Books</a>
+            <a style="color: #33ADB6;" href="https://laniakeabooks.org/">Laniakea Books</a>
             is a public domain publishing house based out of London, England. We publish
             brand new books which are dedicated to the public domain from day one. Read
             about our philosophy
             <a href="https://laniakeabooks.org/philosophy/">here</a>.
         </p>
         <p style="color: grey;">
-            Read my book,
             <a href="https://laniakeabooks.org/books/letters-from-prison/">Letters from Prison</a>,
-            a collection of ideas on society and its prisonhood.
+            published by Laniakea Books, is a collection of ideas on society and its prisonhood.
         </p>
 
         <p>
-            <a style="color: darkorchid;" href="https://chaitinschool.org/">Chaitin School</a>
-            is an in-person group of people interested in software engineering as a fun
-            activity of leisure time as well as a craft to become skilled at. Our values
-            are inclusivity, expertise, humour, gifting, democracy, exploration, community.
-            Join us! We are in London, England.
-        </p>
-
-        <p>
-            <a style="color: chocolate;" href="https://newspeak.house/">Newspeak House</a>
-            is an independent unaccredited residential college founded in 2015 in which
-            I contribute as member and lecturer. We have a
+            London College of Political Technology,
+            <a style="color: maroon;" href="https://newspeak.house/">Newspeak House</a>
+            is an independent residential college founded in 2015 in which I contribute
+            as member and lecturer. We have a
             <a href="https://newspeak.house/study-with-us">course</a>
-            on political technology.
+            on political technology. I teach a module on open source.
         </p>
 
         <p>
-            I keep a blog at <a href="https://nutcroft.com/">nutcroft.com</a>. See the
-            <a href="https://nutcroft.com/toc/">table of contents</a>.
+            <a style="color: #3D6D75;" href="https://shoshincollege.org/">Shoshin College</a>
+            is an experimental learning co-operative. We are interested in offering low-cost
+            yet high-quality classes on a variety of disciplines in London,
+            England.
+        </p>
+
+        <div style="border-left: 8px solid #3D6D75B8;">
+            <blockquote style="margin: 16px 16px;">
+                <p>
+                    In the beginner’s mind there is no thought, “I have attained
+                    something.” All self-centered&nbsp;thoughts  limit our vast mind.
+                    When we have no thought of achievement, no thought  of self, we
+                    are true beginners. Then we can really learn something.
+                </p>
+                <footer>
+                    —Shunryū Suzuki,
+                    <cite>Zen Mind, Beginner’s Mind</cite>
+                </footer>
+            </blockquote>
+        </div>
+
+        <p>
+            I publish some writings at <a href="https://nutcroft.com/">nutcroft.com</a>.
         </p>
 
         <p>
-            Everything I write is dedicated to the public domain.
+            Most things I make are dedicated to the
+            <a href="https://en.wikipedia.org/wiki/Public_domain">public domain</a>
+            and belong to the world.
         </p>
 
         <hr style="border-color: lightcoral;">
 
         <p>
-            Bored? Do these:
+            Bored? Maybe...
         </p>
         <ul>
             <li>
@@ -82,12 +94,12 @@
                 <a href="http://call-cc.org/">chicken scheme</a>
             </li>
             <li>
-                read
+                or read
                 <a href="https://web.mit.edu/6.001/6.037/sicp.pdf">SICP</a> and learn
                 <a href="https://en.wikipedia.org/wiki/Scheme_(programming_language)">scheme</a>
             </li>
             <li>
-                implement Ivan Illich's learning system from
+                implement a modern version of Ivan Illich's learning system from
                 <a href="https://en.wikipedia.org/wiki/Deschooling_Society">Deschooling Society</a>
                 (1971)
             </li>
@@ -96,7 +108,8 @@
 
         <hr style="border-color: turquoise;">
         <p>
-            Don’t be a stranger. Hello! Email hello back! zf@sirodoht.com
+            Don’t be a stranger. Hello! I'm
+            <span style="color: crimson;">zf@sirodoht.com</span>
         </p>
 
     </body>
