remove dot from title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </style>
     </head>
     <body>
-        <h1>Hi, I’m Theodore.</h1>
+        <h1>Hi, I’m Theodore</h1>
 
         <p>
             Most of the time, I'm trying to understand how we can make useful software.
