--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             body { max-width: 580px; font-family: sans-serif; line-height: 1.5; margin: auto;}
             a { color: blue; }
             a:visited { color: cornflowerblue; }
+            h1 { font-weight: normal; }
             hr { border: none; border-top: 1px solid black; }
         </style>
     </head>
@@ -20,8 +21,10 @@
             <a href="https://github.com/sirodoht">on GitHub</a>.
         </p>
 
+        <hr style="border-color: lightcoral;">
+
         <p>
-            Projects:
+            <strong>Projects</strong>
         </p>
         <p>
             <a style="color: salmon;" href="https://mataroa.blog/">Mataroa</a> is an
@@ -74,10 +77,6 @@
         </div>
 
         <p>
-            I publish some writings at <a href="https://nutcroft.com/">nutcroft.com</a>.
-        </p>
-
-        <p>
             Most things I make are dedicated to the
             <a href="https://en.wikipedia.org/wiki/Public_domain">public domain</a>
             and belong to the world.
@@ -86,29 +85,35 @@
         <hr style="border-color: lightcoral;">
 
         <p>
-            Bored? Maybe...
+            <strong>Books</strong>
         </p>
-        <ul>
+
+        <ol>
             <li>
-                write a neural network library in
-                <a href="http://call-cc.org/">chicken scheme</a>
+                <a href="https://en.wikipedia.org/wiki/Deschooling_Society">Deschooling Society</a>,
+                Ivan Illich,
+                1972
             </li>
             <li>
-                or read
-                <a href="https://web.mit.edu/6.001/6.037/sicp.pdf">SICP</a> and learn
-                <a href="https://en.wikipedia.org/wiki/Scheme_(programming_language)">scheme</a>
+                <a href="https://en.wikipedia.org/wiki/The_Ignorant_Schoolmaster">The Ignorant Schoolmaster</a>,
+                Jacques Rancière,
+                1991
             </li>
             <li>
-                implement a modern version of Ivan Illich's learning system from
-                <a href="https://en.wikipedia.org/wiki/Deschooling_Society">Deschooling Society</a>
-                (1971)
+                <a href="https://www.dukeupress.edu/the-structure-of-world-history">The Structure of World History</a>,
+                Kojin Karatani,
+                2014
             </li>
-            <li>start a new kind of university</li>
-        </ul>
+            <li>
+                <a href="https://press.princeton.edu/books/hardcover/9780691181998/open-democracy">Open Democracy</a>,
+                Hélène Landemore,
+                2020
+            </li>
+        </ol>
 
         <hr style="border-color: turquoise;">
         <p>
-            Don’t be a stranger. Hello! I'm
+            I like chatting to people. Email me with your ideas
             <span style="color: crimson;">zf@sirodoht.com</span>
         </p>
 
