Fix meta titles and mobile padding

--- a/hire-me/index.html
+++ b/hire-me/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hire Theodore Keloglou</title>
+        <title>Theodore Keloglou: Why hire me?</title>
         <style>
-            body { max-width: 580px; font-family: sans-serif; line-height: 1.5; margin: auto;}
+            body { max-width: 580px; font-family: sans-serif; line-height: 1.5; margin: auto; padding: 0 8px; }
             a { color: black; }
             h1 { font-weight: normal; }
             hr { border: none; border-top: 1px solid black; }
