--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Theodore Keloglou</title>
+        <title>Theodore Keloglou: Hi</title>
         <style>
-            body { max-width: 580px; font-family: sans-serif; line-height: 1.5; margin: auto;}
+            body { max-width: 580px; font-family: sans-serif; line-height: 1.5; margin: auto; padding: 0 8px; }
             a { color: blue; }
             a:visited { color: cornflowerblue; }
             h1 { font-weight: normal; }
