Change email me copy on hire me page

--- a/hire-me/index.html
+++ b/hire-me/index.html
@@ -331,7 +331,7 @@
         <hr style="border-color: green;">
 
         <p>
-            Interested? Email me at
+            Interested in working together? Email me at
             <span style="color: crimson;">zf@sirodoht.com</span>.
             Not interested? Still email me, we can chat about books and movies!
         </p>
