remove bold letters from hire me page

--- a/hire-me/index.html
+++ b/hire-me/index.html
@@ -20,7 +20,7 @@
 
         <ol>
             <li>
-                <strong>I have 10+ years of experience working as a software engineer</strong> at
+                I have 10+ years of experience working as a software engineer at
                 technology startups across energy, biotech/medtech, fintech (and other)
                 industries. Also, I spend (and have been spending for the last 5 years)
                 some hours of my week working in the education industry and in book
@@ -53,7 +53,7 @@
                 GitHub: <a href="https://github.com/sirodoht">github.com/sirodoht</a>
             </li>
             <li>
-                <strong>I am deeply familiar with the Python programming language</strong> and the
+                I am deeply familiar with the Python programming language and the
                 Django web framework. I'm also broadly familiar with the Python
                 ecosystem and most of its most popular libraries across both the
                 scientific domain (NumPy, Pandas, scikit-learn, spaCy, OpenCV, Pillow,
@@ -84,7 +84,7 @@
         <hr style="border-color: lightgreen;">
 
         <p>
-            <strong>I always want to learn.</strong> Which is why I try to avoid thinking that I know,
+            I always want to learn. Which is why I try to avoid thinking that I know,
             as I have found this mindset to be problematic for acquiring new knowledge
             and improving. I like to think I am a beginner in everything and convince
             myself with the beginner's mind, even though I need to convince people to
@@ -130,7 +130,7 @@
             <li>
                 I post a report (usually in the form of a written
                 standup) for every day that I work, outlining the content of my work.
-                <strong>I do not accept payment unless there is complete satisfaction</strong>
+                I do not accept payment unless there is complete satisfaction
                 with my work from the stakeholders. This is achieved through clear, structured,
                 and relevant communication between me, the team, the stakeholders.
             <li>
@@ -256,7 +256,7 @@
         </p>
 
         <p>
-            <strong>Technical Lead</strong> at
+            Technical Lead at
             <a href="https://www.mobiuscarbon.com/">Mobius Carbon</a>
         </p>
         <ul>
