Add new recommendation and improve general wording

--- a/hire-me/index.html
+++ b/hire-me/index.html
@@ -21,9 +21,9 @@
         <ol>
             <li>
                 I have 10+ years of experience working as a software engineer at
-                technology startups across energy, biotech/medtech, fintech (and other)
+                technology startups across energy, biotech, fintech, and other
                 industries. Also, I spend (and have been spending for the last 5 years)
-                some hours of my week working in the education industry and in book
+                a few days per the month in the education industry and in book
                 publishing and digital publishing (nonfiction and scientific).
             </li>
             <li>
@@ -56,9 +56,8 @@
                 I am deeply familiar with the Python programming language and the
                 Django web framework. I'm also broadly familiar with the Python
                 ecosystem and most of its most popular libraries across both the
-                scientific domain (NumPy, Pandas, scikit-learn, spaCy, OpenCV, Pillow,
-                et al) and the web domain (Flask, FastAPI, Graphene GraphQL, SQLAlchemy,
-                Alembic, et al).
+                scientific domain (NumPy, Pandas, scikit-learn, et al) and the
+                web domain (Flask, FastAPI, Graphene GraphQL, SQLAlchemy, et al).
             </li>
             <li>
                 I have worked extensively in cloud infrastructure with providers such
@@ -67,7 +66,7 @@
             </li>
             <li>
                 I have a lot of experience working with the JavaScript and Node.js
-                ecosystem. I dabble in Go, Rust, and Ruby. I am well-versed in the
+                ecosystem. I dabble in Go, Rust, Ruby. I am well-versed in the
                 latest developments around Artificial Intelligence and Large Language
                 Models: experienced with OpenAI's and Anthropic's APIs, fine-tuning of
                 quantized models, local inference using ollama and llama.cpp.
@@ -87,7 +86,7 @@
             I always want to learn. Which is why I try to avoid thinking that I know,
             as I have found this mindset to be problematic for acquiring new knowledge
             and improving. I like to think I am a beginner in everything and convince
-            myself with the beginner's mind, even though I need to convince people to
+            myself with the beginner's mind, even though I convince people to
             hire me too — which can be paradoxical.
         </p>
 
@@ -114,18 +113,13 @@
 
         <ol>
             <li>
-                I work with speed in mind (but never at the expense of quality or
-                security). In the last 10 years I have joined more than 15 separate
+                I work with speed in mind — but never at the expense of quality or
+                security. In the last 10 years I have joined more than 15 separate
                 teams of software and infrastructure engineers. This background has
                 equiped me with skills that enable me to fairly quickly become familiar
                 with new codebases and architectures. Upon joining a team, my primary
                 objective is to learn how to collaborate and communicate with the team
                 effectively, with the goal of submitting a PR by the second day.
-            </li>
-            <li>
-                I join teams gradually to facilitate minimal risk for the hiring manager
-                (and myself). I start with 2 days per week, and grow to 5 days after 1
-                or 2 months.
             </li>
             <li>
                 I post a report (usually in the form of a written
@@ -148,13 +142,30 @@
         <div style="border-left: 8px solid #3D6D75B8;">
             <blockquote style="margin: 16px 16px;">
                 <p style="line-height: 1.6;">
+                    [Theodore has] an astonishing commitment to transparency, OSS
+                    principles, writing, simplicity, privacy, and responded to a
+                    minor bug I once reported in literally 5 minutes, complete
+                    with a link to the code they had ALREADY WRITTEN to fix the
+                    issue.
+                </p>
+                <footer>
+                    —<a href="https://www.linkedin.com/in/nik-suresh/">Nikhil Suresh</a>,
+                    Executive Director at <a href="https://www.hermit-tech.com/">Hermit Tech</a>,
+                    2024
+                </footer>
+            </blockquote>
+        </div>
+
+        <div style="border-left: 8px solid #3D6D75B8;">
+            <blockquote style="margin: 16px 16px;">
+                <p style="line-height: 1.6;">
                     Theo worked briefly for us as a freelancer before we
                     employed him on a permanent contract. He completed an
                     apprenticeship in Level 7 Artificial Intelligence in
                     addition to working on multiple projects with Animorph.
                     He's an excellent member of a team, is thoughtful and
                     considerate, can explain his reasoning well, and is great
-                    at teaching and learning together. He will be missed! 
+                    at teaching and learning together. He will be missed!
                 </p>
                 <footer>
                     —<a href="https://www.linkedin.com/in/blows/">Hannah Blows</a>,
@@ -291,7 +302,7 @@
 
         <ol>
             <li>
-                In 2024, I started an independent experimental school called
+                In 2024, I cofounded an independent experimental school called
                 <a href="https://shoshincollege.org/">Shoshin College</a> that offers
                 open high-quality courses taught by professionals, that are affordable for
                 everyone. I taught the first course,
